manifests/security/dvorah/manifests-dvorah.yaml
---
# Source: dvorah/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvorah
  labels:
    helm.sh/chart: dvorah-0.3.0
    app.kubernetes.io/name: dvorah
    app.kubernetes.io/instance: dvorah
    app.kubernetes.io/version: "0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: http
      protocol: TCP
      name: http
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: dvorah
    app.kubernetes.io/instance: dvorah
---
# Source: dvorah/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvorah
  labels:
    helm.sh/chart: dvorah-0.3.0
    app.kubernetes.io/name: dvorah
    app.kubernetes.io/instance: dvorah
    app.kubernetes.io/version: "0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dvorah
      app.kubernetes.io/instance: dvorah
  template:
    metadata:
      labels:
        helm.sh/chart: dvorah-0.3.0
        app.kubernetes.io/name: dvorah
        app.kubernetes.io/instance: dvorah
        app.kubernetes.io/version: "0.3.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: dvorah
      containers:
        - name: dvorah
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/betorvs/dvorah:0.4.0"
          imagePullPolicy: IfNotPresent
          args:
            - -cert=/etc/dvorah/certs/tls.crt
            - -key=/etc/dvorah/certs/tls.key
            - -port=8443
            - -adm-port=8080
            - -log-level=debug
            - -digest-cache-size=1000
            - -digest-cache-ttl=12
            - -tag-cache-size=1000
            - -tag-cache-ttl=12
            - -owner-cache-size=1000
            - -owner-cache-ttl=12
            - -use-tag-cache=true
            - -policy-config=/config/config.yaml
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
            - name: metrics
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics
          readinessProbe:
            httpGet:
              path: /healthz
              port: metrics
          resources:
            limits:
              memory: 48Mi
            requests:
              cpu: 100m
              memory: 48Mi
          volumeMounts:
            - name: dvorah-certs
              mountPath: "/etc/dvorah/certs"
              readOnly: true
            - mountPath: /.docker/config.json
              name: dvorah-config-volume
              subPath: config.json
            - mountPath: /config/config.yaml
              name: dvorah-config-volume
              subPath: config.yaml
            - name: dvorah-home 
              mountPath: /home/dvorah
      volumes:
        - name: dvorah-certs
          secret:
            secretName: dvorah-certificates
        - name: dvorah-home
          emptyDir: {}
        - name: dvorah-config-volume
          configMap:
            name: dvorah-config
            items:
            - key: docker-config.json
              path: docker-config.json
            - key: config.yaml
              path: config.yaml
---
# Source: dvorah/templates/validatingwebhook.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: dvorah
  annotations:
    # Inject from ca-root Certificate in devops namespace (our cert-manager namespace)
    cert-manager.io/inject-ca-from: devops/ca-root
  labels:
    helm.sh/chart: dvorah-0.3.0
    app.kubernetes.io/name: dvorah
    app.kubernetes.io/instance: dvorah
    app.kubernetes.io/version: "0.3.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: dvorah.dvorah.svc
    clientConfig:
      service:
        namespace: dvorah
        name: dvorah
        path: /validate
        port: 8443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZTVENDQXpHZ0F3SUJBZ0lSQVB2V0tRUStsN1kxVzBlMVBJQ29NZTB3RFFZSktvWklodmNOQVFFTEJRQXcKUGpFYk1Ca0dBMVVFQ2hNU1RXbHVhR0VnUlcxd2NtVnpZU0JNVkVSQk1SOHdIUVlEVlFRREV4Wk5hVzVvWVNCRApRU0JNYjJOaGJDQkpiblJsY201aE1CNFhEVEkyTURVek1URXpNalUwTVZvWERUTTJNRFV6TVRFek1qVTBNVm93ClBqRWJNQmtHQTFVRUNoTVNUV2x1YUdFZ1JXMXdjbVZ6WVNCTVZFUkJNUjh3SFFZRFZRUURFeFpOYVc1b1lTQkQKUVNCTWIyTmhiQ0JKYm5SbGNtNWhNSUlDSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQWc4QU1JSUNDZ0tDQWdFQQowakZHVkV3QWZ1 [...]
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
          - replicasets
          - daemonsets
          - statefulsets
      - apiGroups:
          - batch
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - jobs
          - cronjobs
    sideEffects: None
    failurePolicy: Ignore
    matchPolicy: Equivalent
    timeoutSeconds: 5
    admissionReviewVersions: ["v1"]
